Closed Bug 1939852 Opened 8 months ago Closed 8 months ago

Partial POP3 messages are not correctly sorted by Size

Categories

(Thunderbird :: Folder and Message Lists, defect)

Thunderbird 128
defect

Tracking

(thunderbird_esr128 wontfix, thunderbird134 wontfix, thunderbird135 affected)

RESOLVED FIXED
136 Branch
Tracking Status
thunderbird_esr128 --- wontfix
thunderbird134 --- wontfix
thunderbird135 --- affected

People

(Reporter: welpy-cw, Assigned: welpy-cw)

Details

Attachments

(1 file)

STR:

  1. Set "Fetch headers only" in a POP account.
  2. Get some new messages.
  3. Sort the inbox by Size.

Expected result:
All messages are correctly sorted by size.

Actual result:
Partial messages are not correctly sorted by size.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
Target Milestone: --- → 136 Branch

Pushed by arschmitz@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/0af9a5539f57
Fix sorting partial messages by Size. r=tobyp

Status: ASSIGNED → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: