Bug 1939852 - Fix sorting partial messages by Size. r=tobyp

Differential Revision: https://phabricator.services.mozilla.com/D233161

--HG--
extra : moz-landing-system : lando